crates/pardosa-schema/tests/compile_fail/isize_field.rs
use pardosa_schema::GenomeSafe;
#[derive(GenomeSafe)]
struct Bad {
    offset: isize,
}
fn main() {}
